<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="77dp" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="198dp" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.5"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="318dp" android:id="@+id/guideline4"
            app:layout_constraintGuide_percent="0.75"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline6" app:layout_constraintGuide_end="597dp"
            app:layout_constraintGuide_percent="0.30"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline7"
            app:layout_constraintGuide_end="291dp" app:layout_constraintGuide_percent="0.6"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="362dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/guideline8" app:layout_constraintGuide_percent="0.75"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="639dp" android:id="@+id/guideline9"
            app:layout_constraintGuide_percent="0.88"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline10" app:layout_constraintGuide_end="512dp"
            app:layout_constraintGuide_percent="0.45"/>
    <Button
            android:text="@string/clear"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/borrar"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintBottom_toTopOf="@+id/guideline10" android:textSize="24sp"/>
    <Button
            android:text="@string/div"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/divsion"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.484"
            app:layout_constraintStart_toStartOf="@+id/guideline4" android:textSize="24sp"
            android:backgroundTint="@android:color/holo_orange_dark" tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_7"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/b7"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" app:layout_constraintStart_toStartOf="parent"
            android:textSize="24sp" android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_8"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/b8"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="@+id/guideline10" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:textSize="24sp"
            android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_9"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/b9"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" app:layout_constraintTop_toTopOf="@+id/guideline10"
            app:layout_constraintBottom_toTopOf="@+id/guideline7" android:textSize="24sp"
            android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/x"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/multi"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline10" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp" android:backgroundTint="@android:color/holo_orange_dark"
            android:textColor="#455A64" tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_4"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/b4"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            app:layout_constraintBottom_toTopOf="@+id/guideline8" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent" android:textSize="24sp"
            android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_5"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/b5"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/guideline7" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2" android:textSize="24sp"
            android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_6"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/b6"
            app:layout_constraintBottom_toTopOf="@+id/guideline8" app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3" app:layout_constraintTop_toTopOf="@+id/guideline7"
            android:textSize="24sp" android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/res"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/resta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintBottom_toTopOf="@+id/guideline8" app:layout_constraintTop_toTopOf="@+id/guideline7"
            android:textSize="24sp" android:backgroundTint="@android:color/holo_orange_dark"
            android:textColor="#455A64" tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_1"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/b1"
            app:layout_constraintBottom_toTopOf="@+id/guideline9" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2" app:layout_constraintTop_toTopOf="@+id/guideline8"
            android:textSize="24sp" android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_2"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/b2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline2" app:layout_constraintTop_toTopOf="@+id/guideline8"
            android:textSize="24sp" android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_3"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/b3"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline3" app:layout_constraintTop_toTopOf="@+id/guideline8"
            android:textSize="24sp" android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/sum"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/suma"
            app:layout_constraintBottom_toTopOf="@+id/guideline9" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4" app:layout_constraintTop_toTopOf="@+id/guideline8"
            android:textSize="24sp" android:backgroundTint="@android:color/holo_orange_dark"
            android:textColor="#455A64" tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/_0"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/b0"
            app:layout_constraintEnd_toStartOf="@+id/guideline3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9" android:textSize="24sp"
            android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck"/>
    <Button
            android:text="@string/point"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/punto"
            app:layout_constraintTop_toTopOf="@+id/guideline9" app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:textSize="24sp"
            android:backgroundTint="@android:color/darker_gray" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <Button
            android:text="@string/igu"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/igual"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline4" android:textSize="24sp"
            android:backgroundTint="@android:color/holo_orange_dark" android:textColor="#455A64"
            tools:ignore="TextContrastCheck"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/CalVi"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/guideline6"
            android:gravity="center" android:textAlignment="textEnd" android:textColor="@color/black"
            android:textSize="48sp" tools:text="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>